force-app/main/default/objects/Trader__c/Trader__c.object-meta.xml
<CustomObject>
    <label>Trader</label>
    <nameField>
        <displayFormat>T - {0000}</displayFormat>
        <label>Trader Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Traders</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>