force-app/main/default/objects/Trader__c/fields/Role__c.field-meta.xml
<CustomField>
    <fullName>Role__c</fullName>
    <label>Role</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Primary Trader</fullName>
            </value>
            <value>
                <fullName>Secondary Trader 1</fullName>
            </value>
            <value>
                <fullName>Secondary Trader 2</fullName>
            </value>
            <value>
                <fullName>Secondary Trader 3</fullName>
            </value>
            <value>
                <fullName>Secondary Trader 4</fullName>
            </value>
            <value>
                <fullName>Secondary Trader 5</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>