force-app/main/default/objects/Trader__c/fields/Trader_Name__c.field-meta.xml
<CustomField>
    <fullName>Trader_Name__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Trader Name</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Traders</relationshipName>
    <type>Lookup</type>
</CustomField>